manifests/istio-sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea-service
  labels:
    app: servicea
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: servicea
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: servicea-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - name: servicea
        image: SERVICE_TAG_A:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        readinessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:9080/health
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: serviceb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: serviceb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: SERVICE_TAG_B:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        readinessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:9080/health
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mp-istio-sample-istio-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /mp-istio-sample/serviceA
        backend:
          serviceName: servicea-service
          servicePort: 9080
