manifests/non-istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /health
        backend:
          serviceName: servicea-service
          servicePort: 9080
      - path: /mp-istio-sample/serviceA
        backend:
          serviceName: servicea-service
          servicePort: 9080
